--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,22 @@
   		<artifactId>validation-api</artifactId>
   		<version>1.1.0.Final</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate</artifactId>
+  		<version>3.5.4-Final</version>
+  		<type>pom</type>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-annotations</artifactId>
+  		<version>3.5.6-Final</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-commons-annotations</artifactId>
+  		<version>3.3.0.ga</version>
+  	</dependency>
   </dependencies>
   <packaging>war</packaging>
 </project>
