--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -5,3 +5,8 @@ DataGenerator.objectAttribute=hasEntityTarget
 DataGenerator.subjectAttribute=hasEntitySource
 DataGenerator.tripleInputFormat=N-TRIPLE
 DataGenerator.tripleOutputFormat=TURTLE
+
+DBCommunication.user=nentwig
+DBCommunication.password=monskyho
+DBCommunication.server=wdiserv1.informatik.uni-leipzig.de
+DBCommunication.localServer=jdbc:mysql://localhost:3306/linkinglod
