--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -3,6 +3,7 @@ DataGenerator.linkType=hasLinkType
 DataGenerator.ns=http://linkinglod.eu
 DataGenerator.objectAttribute=hasEntityTarget
 DataGenerator.subjectAttribute=hasEntitySource
+DataGenerator.hashMapping=wasDerivedFrom
 DataGenerator.tripleInputFormat=N-TRIPLE
 DataGenerator.tripleOutputFormat=TURTLE
 
