improved vocabulary for triple data

--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -1,11 +1,19 @@
-DataGenerator.fileLocation=/home/markus/Mapping/Links/geonames-dbpedia.nt
-DataGenerator.linkType=hasLinkType
-DataGenerator.ns=http://linkinglod.eu
-DataGenerator.objectAttribute=hasEntityTarget
-DataGenerator.subjectAttribute=hasEntitySource
-DataGenerator.hashMapping=wasDerivedFrom
-DataGenerator.tripleInputFormat=N-TRIPLE
-DataGenerator.tripleOutputFormat=TURTLE
+fileLocation=/home/markus/Mapping/Links/geonames-dbpedia.nt
+linkType=hasLinkType
+ns=http://linkinglod.eu
+objectAttribute=hasEntityTarget
+subjectAttribute=hasEntitySource
+hashMapping=wasDerivedFrom
+vocabularyLink=link
+vocabularyMapping=mapping
+vocabularyFramework=framework
+vocabularyUser=user
+vocabularySource=source
+vocabularyProperty=property
+delimiter=/
+fragmentIdentifier=#
+tripleInputFormat=N-TRIPLE
+tripleOutputFormat=TURTLE
 
 DBCommunication.user=nentwig
 DBCommunication.password=monskyho
