file upload and conversion working, processor almost done

--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -19,3 +19,7 @@ DBCommunication.user=nentwig
 DBCommunication.password=monskyho
 DBCommunication.server=wdiserv1.informatik.uni-leipzig.de
 DBCommunication.localServer=jdbc:mysql://localhost:3306/linkinglod
+
+TripleStore.user=dba
+TripleStore.password=solsivea
+TripleStore.localServer=jdbc:virtuoso://localhost:8890
