mapping processor demo completed, started working on GUI

--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -4,12 +4,15 @@ ns=http://www.linkinglod.eu
 objectAttribute=hasEntityTarget
 subjectAttribute=hasEntitySource
 hashMapping=wasDerivedFrom
+vocabularyOntology=ontology
 vocabularyLink=link
 vocabularyMapping=mapping
 vocabularyFramework=framework
+vocabularyAlgorithm=algorithm
 vocabularyUser=user
 vocabularySource=source
 vocabularyProperty=property
+vocabularyVersion=version
 delimiter=/
 fragmentIdentifier=#
 tripleInputFormat=N-TRIPLE
