Mapping, Link, LinkType, EntityObject working (Hibernate)

--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -11,7 +11,7 @@ vocabularyUser=user
 vocabularySource=source
 vocabularyProperty=property
 delimiter=/
-fragmentIdentifier=#
+fragmentIdentifier=/
 tripleInputFormat=N-TRIPLE
 tripleOutputFormat=TURTLE
 
