fully working demo (requires local Virtuoso instance)

--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -14,7 +14,7 @@ vocabularySource=source
 vocabularyProperty=property
 vocabularyVersion=version
 delimiter=/
-fragmentIdentifier=/
+fragmentIdentifier=#
 tripleInputFormat=N-TRIPLE
 tripleOutputFormat=TURTLE
 
@@ -24,5 +24,6 @@ DBCommunication.server=wdiserv1.informatik.uni-leipzig.de
 DBCommunication.localServer=jdbc:mysql://localhost:3306/linkinglod
 
 TripleStore.user=dba
-TripleStore.password=solsivea
-TripleStore.localServer=jdbc:virtuoso://localhost:8890
+TripleStore.password=dba
+TripleStore.localServer=jdbc:virtuoso://localhost:1111
+TripleStore.graph=http://localhost:8890/sparql
