DB comm optimized, much faster now

--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -1,4 +1,5 @@
-fileLocation=/home/markus/Mapping/Links/geonames-dbpedia.nt
+#fileLocation=/home/markus/Mapping/Links/geonames-dbpedia.nt
+fileLocation=/home/markus/Mapping/Links/test.nt
 ns=http://www.linklion.org
 
 vocabularyOntology=ontology
