fixed author tag, fixed constructors for hibernate classes

--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -1,5 +1,5 @@
 #fileLocation=/home/markus/Mapping/Links/geonames-dbpedia.nt
-fileLocation=/home/markus/Mapping/LGD-Interlinks-110406-DBpedia/university/links.nt
+fileLocation=/home/markus/Mapping/links-viaf(short).nt
 ns=http://www.linklion.org
 
 vocabularyOntology=ontology
