Upload and parsing of .nt files to server working for DB part

--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -22,6 +22,6 @@ DBCommunication.server=wdiserv1.informatik.uni-leipzig.de
 DBCommunication.localServer=jdbc:mysql://localhost:3306/linkinglod
 
 TripleStore.user=dba
-TripleStore.password=dba
+TripleStore.password=solsivea
 TripleStore.localServer=jdbc:virtuoso://localhost:1111
 TripleStore.graph=http://localhost:8890/sparql
