--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
   		<artifactId>jena-tdb</artifactId>
   		<version>1.0.0</version>
   	</dependency>
-  	<dependency>
+<!--   	<dependency>
   		<groupId>ch.qos.logback</groupId>
   		<artifactId>logback-classic</artifactId>
   		<version>1.0.13</version>
@@ -57,7 +57,7 @@
   		<groupId>ch.qos.logback</groupId>
   		<artifactId>logback-core</artifactId>
   		<version>1.0.13</version>
-  	</dependency>
+  	</dependency> -->
   	<dependency>
   		<groupId>com.sun.jersey</groupId>
   		<artifactId>jersey-core</artifactId>
@@ -117,6 +117,11 @@
   		<groupId>virtuoso.jena.driver</groupId>
   		<artifactId>virt-jena</artifactId>
   		<version>2.6.2</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.slf4j</groupId>
+  		<artifactId>slf4j-simple</artifactId>
+  		<version>1.7.5</version>
   	</dependency>
   </dependencies>
   <packaging>war</packaging>
