bugfixes, disabling some logs for faster upload

--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -1,5 +1,5 @@
 #fileLocation=/home/markus/Mapping/Links/geonames-dbpedia.nt
-fileLocation=/home/markus/Mapping/links-viaf(short).nt
+fileLocation=/home/markus/Mapping/sameAsDump/fail.nt
 ns=http://www.linklion.org
 
 vocabularyOntology=ontology
