added (missing) framework to modified Jena model, implemented use of FormDataBodyParts (framework, algorithm name, source, target name), fixed ns to linklion.org

--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -1,5 +1,5 @@
 #fileLocation=/home/markus/Mapping/Links/geonames-dbpedia.nt
-fileLocation=/home/markus/Mapping/sameAsDump/fail.nt
+fileLocation=/home/markus/Mapping/links-viaf(short).nt
 ns=http://www.linklion.org
 
 vocabularyOntology=ontology
@@ -24,4 +24,4 @@ DBCommunication.localServer=jdbc:mysql://localhost:3306/linkinglod
 TripleStore.user=dba
 TripleStore.password=solsivea
 TripleStore.localServer=jdbc:virtuoso://localhost:1111
-TripleStore.graph=http://localhost:8890/sparql
+TripleStore.graph=http://www.linklion.org/ontology/lionrdf#
