fixed https://github.com/AKSW/LinkingLodPortal/issues/2 , cleanup ontology vocabulary

--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -1,18 +1,18 @@
 #fileLocation=/home/markus/Mapping/Links/geonames-dbpedia.nt
 fileLocation=/home/markus/Mapping/links-viaf(short).nt
-ns=http://www.linklion.org
 
-vocabularyOntology=ontology
-vocabularyLink=link
-vocabularyMapping=mapping
-vocabularyFramework=framework
-vocabularyAlgorithm=algorithm
-vocabularyDataset=dataset
-vocabularyUser=user
-vocabularySource=source
-vocabularyVersion=version
-delimiter=/
-fragmentIdentifier=#
+
+
+# can be deleted soon
+#ns=http://www.linklion.org
+#vocabularyOntology=ontology
+#vocabularyUser=user
+#vocabularySource=source
+#vocabularyVersion=version
+#delimiter=/
+#fragmentIdentifier=#
+
+#needed
 tripleInputFormat=N-TRIPLE
 tripleOutputFormat=TURTLE
 
