--- a/src/main/resources/linkinglod.properties
+++ b/src/main/resources/linkinglod.properties
@@ -26,3 +26,4 @@ TripleStore.user=dba
 TripleStore.password=solsivea
 TripleStore.localServer=jdbc:virtuoso://localhost:1111
 TripleStore.graph=http://www.linklion.org
+TripleStore.endpoint=http://localhost:8890/sparql
