--- a/pom.xml
+++ b/pom.xml
@@ -125,11 +125,6 @@
   	</dependency>
 	<dependency>
 		<groupId>javax.servlet</groupId>
-		<artifactId>jsp-api</artifactId>
-		<version>2.1</version>
-	</dependency>
-	<dependency>
-		<groupId>javax.servlet</groupId>
 		<artifactId>servlet-api</artifactId>
 		<version>2.5</version>
 	</dependency>
@@ -138,6 +133,11 @@
 		<artifactId>jstl</artifactId>
 		<version>1.2</version>
 	</dependency>
-</dependencies>
+	<dependency>
+		<groupId>javax.servlet.jsp</groupId>
+		<artifactId>jsp-api</artifactId>
+		<version>2.2.1-b03</version>
+	</dependency>
+  </dependencies>
   <packaging>war</packaging>
 </project>
