--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,21 @@
 
  	<servlet-mapping>
 		<servlet-name>restService</servlet-name>
-		<url-pattern>/rest/*</url-pattern>
+	<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+  		<display-name>DWR Servlet</display-name>
+  		<servlet-name>dwr-invoker</servlet-name>  
+  		<servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>
+  		<init-param>
+     		<param-name>debug</param-name>
+     		<param-value>true</param-value>
+  		</init-param>
+	</servlet>
+
+	<servlet-mapping>
+  		<servlet-name>dwr-invoker</servlet-name>
+  		<url-pattern>/dwr/*</url-pattern>
+	</servlet-mapping>
 </web-app>
