--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,12 @@
 			<artifactId>commons-logging</artifactId>
 			<version>1.1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>17.0</version>
+			<classifier>site</classifier>
+		</dependency>
 	</dependencies>
 	<packaging>war</packaging>
 </project>
